------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Sat Oct 10 11:59 CET 1998   Simon Weijgers  <simon@mbit.doa.org>

	* After detection of executable format jump to
	  rest of the code instead of going on detecting other
	  formats.

Sat Oct 10 09:18 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Moved dependency cleaning to its own rule.

Thu Oct 08 20:40 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added very simple signal support.

Mon Oct 05 11:15 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Replaced functions cli() and sti() with single asm instruction
	  macros icli() and isti(), which saves 96 bytes.

	* Moved Makefile dependency cleaning to distclean as I was fed up
	  of doing make dep so much.

Sun Sep 25 12:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Removed redundant code from the dircon driver.

Sat Sep 26 02:07 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
	
	* Added a ### Dependencie line at the end of the Makefiles
	  in fs/ and fs/elksfs/.

Sat Sep 26 01:50 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
	
	* Fixed various things (typos etc) in fs/exec.c and
	  include/linuxmt/msdos.h to make .exe-support compilable.

Sat Sep 26 00:32 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
	
	* "Fixed" Documentation/Configure.help so that help text
	  fits in the menuconfig help-window line length.

Fri Sep 25 15:30 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed a some bugs pointed out by Marnix Coppens <maco@telindus.be>

	  Changed code at 147 in arch/i86/mm/user.c in strlen_fromfs
	  which should use es:di to point to a string rather than ds:si.

	  Fixed code in fs/exec.c which uses file.f_op before it has been
	  checked.