@@ -28,7 +28,6 @@ struct task_struct * p;
 	unsigned long mask = 1 << (sig-1);
 	struct sigaction * sa = sig + p->sig.action - 1;
 
-	printk("Generating sig %d.\n", sig);
 	if (!(mask & p->blocked)) {
 		if (sa->sa_handler == SIG_IGN && sig != SIGCHLD)
 			return;
@@ -37,9 +36,12 @@ struct task_struct * p;
 		     sig == SIGWINCH || sig == SIGURG))
 			return;
 	}
+	printk("Generating sig %d.\n", sig);
 	p->signal |= mask;
-	if ((p->state == TASK_INTERRUPTIBLE) && (p->signal & ~p->blocked))
+	if ((p->state == TASK_INTERRUPTIBLE) /* && (p->signal & ~p->blocked) */) {
+		printk("and wakig up\n");
 		wake_up_process(p);
+	}
 }
 
 int send_sig(sig, p, priv)
